Fix bottom white bar on dark mode

--- a/src/newtab/note.css
+++ b/src/newtab/note.css
@@ -11,7 +11,7 @@ body {
   background: rgba(0,0,0,0.03);
 }
 .note-wrapper {
-  height: 99%;
+  height: 100%;
   padding: 0 0 0 0;
 }
 .note-container {
